--- a/index.css
+++ b/index.css
@@ -3,14 +3,79 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: 'Balsamiq Sans';
 }
 body {
     background-color: #fda085;
-    color: #E6E3E9;
-    font-family: 'Balsamiq Sans';
+    color: lemonchiffon;
+}
+
+#container {
+    height: 100%;
+    width: auto;
+    padding: 50px;
+    text-align: center;
 }
 
 h1 {
+    margin-top: 50px;
     text-align: center;
     font-size: 80px;
+}
+
+span {
+    text-decoration: none;
+    color: black;
+}
+
+.btn{
+    background-color: #ee7d5e;
+    border: none;
+    width: 400px;
+    padding: 20px;
+    margin-top: 10px;
+    border-radius: 20px;
+    color: #E6E3E9;
+    font-size: 20px;
+    font-weight: 600;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.btn:hover{
+    transform: translateX(5px) translateY(-5px);
+    background-color: lemonchiffon;
+    color: #fda085;
+}
+
+.pokemon {
+    display:inline-block;
+    text-align: center;
+    margin: 10px;
+    border: #E6E3E9 1px solid;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: lemonchiffon;
+    font-family: 'Balsamiq Sans';
+  
+}
+
+.pokemon img {
+    display: block;
+}
+
+.link {
+    color: #E6E3E9;
+}
+
+.link:hover{
+    text-decoration: underline;
+    color: lemonchiffon;
+}
+
+.credits {
+    font-size: 1rem;
+    text-align: center;
+    margin-top: 400px;
+    padding: 10px 10px;
 }
